update controller sesuai dengan best practice
